# actix-diesel-template

./: .envrc  .gitignore  Cargo.toml  flake.nix  readme.md
migrations/20170124012402_create_users/: down.sql  up.sql
migrations/2023-09-07-094618_create_plant/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
