[package]
name = "plant_space"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
# actix-web.workspace = true
diesel = { version = "2", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4.20"
# env_logger.workspace = true
# log.workspace = true
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
