[package]
name = "plant_space"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
warp = "0.3.5"
tokio = { version = "1.32.0", features = ["full"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
